--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -23,7 +22,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        curl -sSL https://install.python-poetry.org | POETRY_HOME=/etc/poetry python3 -
+        pip3 install poetry
         poetry install requisites
     - name: Run Tests
       run: |
